# bobgame

./: .gitignore  CLAUDE.md  README.md  dev.sh
agents/: CLAUDE.md  pyproject.toml
agents/src/agents/: __init__.py  __main__.py  random_agent.py  world_pb2.pyi
assets/dawnlike-tileset/: README.txt
assets/dawnlike-tileset/Characters/: characters.tsx
assets/dawnlike-tileset/Examples/: Town.tmx  timtest.tmx
assets/dawnlike-tileset/Objects/: Chest.tsx  Decor.tsx  Door.tsx  Floor.tsx  GUI.tsx  Ground.tsx  Hill.tsx  Plant.tsx  Tile.tsx  Tree.tsx  Wall.tsx  player.tsx
docs/: 01_architecture.md  02_tech_stack_and_standards.md  03_implementation_plan.md  04_tileset_preparation.md  README.md  boardgame_world_design.md  terrain_generation_proposal.md
proto/: world.proto
runner/: CLAUDE.md  pyproject.toml
runner/configs/: foraging.toml
runner/src/runner/: __init__.py  __main__.py  config.py  discovery.py  manager.py  process.py  world_pb2.py  world_pb2.pyi  world_pb2_grpc.py
runner/tests/: conftest.py  test_config.py  test_manager.py  test_process.py
saves/: .gitignore
tools/: compile_proto.sh  generate_sprite_index.py  pyproject.toml  visualize_world.py
tools/src/tools/: __init__.py  generate_atlases.py
viewer/: CLAUDE.md  README.md  index.html  package-lock.json  package.json
viewer/public/assets/: dawnlike  sprite-index.json
viewer/src/: main.ts
viewer/src/network/: WebSocketClient.ts  WorldState.ts  index.ts  types.ts
viewer/src/scenes/: GameScene.ts  PreloadScene.ts
viewer/src/sprites/: SpriteIndex.ts  index.ts
viewer/src/terrain/: ChunkManager.ts  ViewportTracker.ts  (+1 more)
world/: CLAUDE.md  pyproject.toml
world/configs/: default.toml  foraging.toml  island.toml  island_small.toml
world/src/world/: __init__.py  chunks.py  config.py  conversion.py  encoding.py  exceptions.py  foraging.py  lease.py  logging.py  movement.py  run_manager.py  server.py  state.py  terrain_types.py  tick.py  types.py
world/src/world/services/: __init__.py  action_service.py  discovery_service.py  lease_service.py  observation_service.py  tick_service.py  viewer_ws_service.py
world/src/world/terrain/: __init__.py  __main__.py  classification.py  cli.py  coastal.py  config.py  fields.py  generator.py  hydrology.py  island.py  noise.py  objects.py  persistence.py  validation.py
world/tests/: __init__.py  conftest.py  test_chunks.py  test_conversion.py  test_encoding.py  test_foraging.py  test_integration.py  test_inventory.py  test_lease.py  test_movement.py  test_objects.py  test_state.py  test_tick.py  test_types.py  test_viewer_ws.py
world/tests/terrain/: __init__.py  test_classification.py  test_coastal.py  test_hydrology.py  test_island.py  test_noise.py  test_terrain_types.py
(+7 files in other folders)
